- Summary:  Refactor code(Partial).
- Bugzilla Bug (s) Resolved:
N/A

- Description:
Fixed issues found by FindBugs tool.

- Tests Description  :
Manual test


- Files Edited:



- Files Added:




- Files Deleted:





- Notes to Build Team:



- Notes to Developers:



- Notes to QA:



-  Notes to Documentation: